# ContainAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ContainAI.sln  ContainAI.slnx  Directory.Build.props  Directory.Packages.props  Dockerfile  Dockerfile.base  Dockerfile.proxy  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  LICENSE  NETWORK_PROXY.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md  WHY.md  config.toml  docker-compose.yml  fn-51-per-agent-manifest-files-and-launch.3  global.json  install.ps1  install.sh  launch-agent  launch-agent.ps1  mcp-secrets.env.example  run-claude  run-claude.ps1  run-codex  (+4 more)
.claude/: settings.local.json
.config/: dotnet-tools.json
.flow/: .checkpoint-fn-10-vep.json  .checkpoint-fn-11-1an.json  .checkpoint-fn-13-1c7.json  .checkpoint-fn-14-nm0.json  .checkpoint-fn-15-281.json  .checkpoint-fn-16-4c9.json  .checkpoint-fn-17-axl.json  .checkpoint-fn-18-g96.json  .checkpoint-fn-2-kcs.json  .checkpoint-fn-20-6fe.json  .checkpoint-fn-23-glf.json  .checkpoint-fn-27-hbi.json  .checkpoint-fn-29-fv0.json  .checkpoint-fn-3-8m1.json  .checkpoint-fn-30-x9f.json  .checkpoint-fn-31-gib.json  .checkpoint-fn-32-2mq.json  .checkpoint-fn-34-fk5.json  .checkpoint-fn-35-e0x.json  .checkpoint-fn-36-rb7.json  .checkpoint-fn-37-4xi.json  .checkpoint-fn-38-8lv.json  .checkpoint-fn-39-ua0.json  .checkpoint-fn-4-vet.json  .checkpoint-fn-40-996.json  .checkpoint-fn-41-9xt.json  .checkpoint-fn-44-build-system-net-project-restructuring.json  .checkpoint-fn-45-comprehensive-documentation-overhaul.json  .checkpoint-fn-46-cli-ux-audit-and-simplification.json  .checkpoint-fn-47-extensibility-agent-integration.json  .checkpoint-fn-49-devcontainer-integration.json  .checkpoint-fn-5-urz.json  .checkpoint-fn-51-per-agent-manifest-files-and-launch.json  .checkpoint-fn-6-aaz.json  config.json  (+5 more)
src/agent-task-runner/: Cargo.toml
src/agent-task-runner/src/: agent_task_runnerctl.rs  agent_task_runnerd.rs  agentcli_exec.rs  channel.rs  mcp_wrapper_runner.rs  seccomp.rs
src/audit-shim/: Cargo.toml
src/audit-shim/src/: lib.rs
(+3146 files in other folders)
