[package]
name = "agent-task-runner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
libc = "0.2"
libseccomp-sys = "0.3"
nix = { version = "0.30", default-features = false, features = ["fs", "ioctl", "mount", "poll", "process", "signal", "socket", "uio", "user"] }
caps = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
thiserror = "2.0"
audit-protocol = { path = "../audit-protocol" }
chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"

[[bin]]
name = "agentcli-exec"
path = "src/agentcli_exec.rs"

[[bin]]
name = "agent-task-runnerd"
path = "src/agent_task_runnerd.rs"

[[bin]]
name = "agent-task-sandbox"
path = "src/agent_task_sandbox.rs"

[[bin]]
name = "mcp-wrapper-runner"
path = "src/mcp_wrapper_runner.rs"


